layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -78,13 +78,7 @@ body {
  
   
 }
-.float-child {
-  width: 50%;
-  float: left;
-  padding: 20px;
-  
- 
-}
+
 .tag {
     color: #266A61;
 }
